add http client service

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <div id="main_container">
         <header id="header">
         </header>
+        <div id="content">
+        </div>
         <aside id="side_bar"></aside>>
         <footer></footer>
     </div>
