--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,15 @@
     <title>Proyecto CodeSmells</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+<body >
+<div id="main-container"></div>
 
-<body>
-    <div id="main_container">
-        <header id="header">
-        </header>
-        <div id="content">
-        </div>
-        <aside id="side_bar"></aside>>
-        <footer></footer>
-    </div>
+<script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+<script
+  src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+  crossorigin></script>
+<script
+  src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+  crossorigin></script>
 </body>
-
 </html>
