change in render information

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Proyecto CodeSmells</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body >
+<body id="root" >
 <div id="main-container"></div>
 
 <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
